# Melbourne-Footfalls

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
Data (20230918)/: pedestrian-counting-system-monthly-counts-per-hour.xlsx  pedestrian-counting-system-past-hour-counts-per-minute.xlsx  pedestrian-counting-system-sensor-locations.xlsx
Python scripts/: Melbourne_footfall_data_preprocessing.ipynb  Melbourne_footfall_modelling.ipynb  pyproject.toml  requirements.txt
Python scripts/basic_analysis/: data_format_analysis.ipynb  imputation_analysis.ipynb
Python scripts/custom_modules/: TSClustering.py  basic_funs.py  default_model_configs.py  fetch_amenities_funs.py  modelling_funs.py  plot_funs.py
data_preprocessed/1. merged_peds_data_hist_curr/: sensor_locations_processed.xlsx
data_preprocessed/4. final_group/: grouped_data_2009_2013.csv  grouped_data_2014_2014.csv  grouped_data_2015_2015.csv  grouped_data_2016_2016.csv  grouped_data_2017_2017.csv  grouped_data_2018_2018.csv  grouped_data_2019_2019.csv  grouped_data_2020_2020.csv  grouped_data_2021_2021.csv  grouped_data_2022_2022.csv  grouped_data_2023_2023.csv
