[tool.poetry]
name = "footfall-analysis"
version = "0.1.0"
description = "Time-series clustering for pedestrain footfall data"
authors = ["Yanhua Xu  <19346059+alysia2019@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
folium = "^0.14.0"
matplotlib = "^3.8.1"
pandas = "^2.1.2"
pillow = "^10.1.0"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
scipy = "^1.11.3"
seaborn = "^0.13.0"
tabulate = "^0.9.0"
tsfel = "^0.1.6"
tsfresh = "^0.20.1"
numpy = "^1.22.4"
kneed = "^0.8.5"
autoelbow = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
